syntax = "proto3";

package worker;

option go_package = "github.com/10Narratives/distgo-db/pkg/proto/worker";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

message Status {
  StatusCode code = 1;
  string message = 2;
  repeated string details = 3;
}

enum StatusCode {
  OK = 0;
  NOT_FOUND = 1;
  CONFLICT = 2;
  INVALID_ARGUMENT = 3;
  INTERNAL_ERROR = 4;
  PERMISSION_DENIED = 5;
  UNAUTHENTICATED = 6;
  RESOURCE_EXHAUSTED = 7;
  FAILED_PRECONDITION = 8;
}

message Document {
  string id = 1;
  google.protobuf.Struct data = 2;
  int64 revision = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message ReplicaInfo {
  string node_id = 1;
  string address = 2;
  ReplicaRole role = 3;
  uint64 term = 4;
  uint64 last_log_index = 5;
  uint64 commit_index = 6;
  bool syncing = 7;
}

enum ReplicaRole {
  FOLLOWER = 0;
  CANDIDATE = 1;
  LEADER = 2;
  LEARNER = 3;
}

message NodeStats {
  string node_id = 1;
  double cpu_usage = 2;
  uint64 memory_used_mb = 3;
  uint64 memory_total_mb = 4;
  uint32 active_connections = 5;
}

message ClusterHealth {
  uint32 total_nodes = 1;
  uint32 healthy_nodes = 2;
  uint32 under_replicated_shards = 3;
  repeated NodeStats node_stats = 4;
  google.protobuf.Timestamp report_time = 5;
}

message Empty {}

service Storage {
    rpc CreateDocument(CreateDocumentRequest) returns (CreateDocumentResponse);
    rpc GetDocument(GetDocumentRequest) returns (GetDocumentResponse);
    rpc ListDocuments(ListDocumentsRequest) returns (ListDocumentsResponse);
    rpc UpdateDocument(UpdateDocumentRequest) returns (UpdateDocumentResponse);
    rpc DeleteDocument(DeleteDocumentRequest) returns (DeleteDocumentResponse);
}

message CreateDocumentRequest {
    string collection = 1;          
    google.protobuf.Struct document = 2;
}

message CreateDocumentResponse {
    Document created_document = 1;
    Status status = 2;
}

message GetDocumentRequest {
    string collection = 1;
    string document_id = 2;
    bool include_metadata = 3;
}

message GetDocumentResponse {
    Document document = 1;
    Status status = 2;
}

message ListDocumentsRequest {
    string collection = 1;  
}

message ListDocumentsResponse {
    repeated Document documents = 1;
    Status status = 3;
}

message UpdateDocumentRequest {
    string collection = 1;
    string document_id = 2;
    google.protobuf.Struct update = 3;
    optional int64 if_revision = 4;   
    bool upsert = 5;                  
}

message UpdateDocumentResponse {
    Document updated_document = 1;
    Status status = 2;
}

message DeleteDocumentRequest {
    string collection = 1;
    string document_id = 2;
    optional int64 if_revision = 3; 
}

message DeleteDocumentResponse {
    Status status = 1;
}